log/build_2024-04-05_15-34-34/1DOF_arm_controller/stderr.log
  File "/home/rosbot/arm_ws/install/1DOF_arm_controller/lib/python3.10/site-packages/1DOF_arm_controller/apps_node3.py", line 348
    app_thread = threading.Thread(target= node.AppMode_callback, args=(str("hello"))
                                 ^
SyntaxError: '(' was never closed

